client/src/app/components/web/home.component.css
@font-face {
    font-family: RobotoLight;
     src: url('./../../../assets/fonts/Roboto-Light.ttf'); 
}

@media (max-width: 768px){
    html{
        margin-top: 15% !important;
    }
}

@media (min-width: 768px){
    html{
        margin-top: 5% !important;
    }
}

h1, h2, h3, h4, h5 {
    font-family: 'RobotoLight', sans-serif;
    line-height: 1;
    margin: 2px 0 20px;
    letter-spacing: 0.1em;
    color: #5ea2ba;
    font-weight: 300;
}

h1 {
    font-size: 8vw;
}

@media screen and (max-width: 700px) {
    h1 {
        font-size: 42px;
    }
}

@media screen and (min-width: 1200px) {
    h1 {
        font-size: 100px;
    }

    .card h2 {
        font-size: 40px;
    }
}

.card h2 {
    color: black;
    font-weight: 500;
    font-size: 2.7vw;
}

.card p {
    font-weight: 400;
}

p {
    font-family: 'Roboto';
    line-height: 1;
    font-weight: 300;
    margin: 0 0 0.75em;
    letter-spacing: 0.1em;
    font-size: 1.5vw;
}

@media screen and (max-width: 700px) {
    p {
       font-size: 15px;
    }
    .card h2 {
        font-size: 40px;
    }
  }

.searchMain {
    position: relative;
    display: table;
    width: 100%;
    min-height: 100vh;
    top: 15%;
    left: 0;
    z-index: 2;
}

.content {
    position: absolute;
    width: 100%;
    height: 78%;
    top: 22%;
    left: 0;
    z-index: -1;
}

.textBox:focus {
    outline: none;
}


.dataCenter {
    text-align: center;
    position: relative;
    background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(252,110,81, 0.5));
    width: 100%;
    min-height: fit-content;
    top: 112%;
    left: 0;
    z-index: 1;
}

.services {
    text-align: center;
    position: relative;
    background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(244,208,63, 0.5));
    width: 100%;
    min-height: fit-content;
    top: 212%;
    left: 0;
    z-index: 1;
}

.info {
    text-align: center;
    position: relative;
    background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(54,215,183, 0.5));
    width: 100%;
    min-height: fit-content;
    top: 312%;
    left: 0;
    z-index: 1;
}

.tools {
    text-align: center;
    position: relative;
    background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(34,167,240, 0.5));
    width: 100%;
    min-height: fit-content;
    top: 412%;
    left: 0;
    z-index: 1;
}

.back {
    position: absolute;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    width: 100%;
    min-height: 100%;
    background-image: url('../../../assets/Fondo-Home-AOD.jpg');
    opacity: 0.5;
    filter: alpha(opacity=50);
    z-index: -1;
}

.cont {
    display: table-cell;
    vertical-align: middle;
    padding: 15%;
    z-index: 0;
}

.searcher {
    position: absolute;
    width: 65%;
    height: 100;
    top: 40%;
    left: 15%;
    right: 15%;
    margin: 0 auto;
    z-index: 1;
    display: table;
}
#autocomplete{
    display: table-cell;
    vertical-align: middle;
}

@media screen and (max-height: 500px) {
    .searcher{
        top: 55%;
    }
}  

@media screen and (max-width: 500px) {
    .searcher{
        top: 55%;
    }
}

@media screen and (min-width: 500px) and (max-width: 1366px) {
    .searcher{
        top: 50%;
    }
}

::-webkit-input-placeholder { /* WebKit, Blink, Edge */
    color:    #5EA2BA;
}
:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
   color:    #5EA2BA;
   opacity:  1;
}
::-moz-placeholder { /* Mozilla Firefox 19+ */
   color:    #5EA2BA;
   opacity:  1;
}
:-ms-input-placeholder { /* Internet Explorer 10-11 */
   color:    #5EA2BA;
}
::-ms-input-placeholder { /* Microsoft Edge */
   color:    #5EA2BA;
}

.goUp {
    position: relative;
    left: 0;
    width: 100%;
    border: none;
    background: transparent;
    top: 0;
    z-index: 1;
    outline: none !important;
}

.goDown {
    position: relative;
    left: 0;
    width: 100%;
    border: none;
    background: transparent;
    bottom: 0;
    outline: none !important;
}

button {
    max-width: 100%;
    height: auto;
}

.searchMain .goDown {
    position: absolute;
    bottom: 0;
}

.goUp:hover {
    cursor: pointer;
}

.goDown:hover {
    cursor: pointer;
}

.contenido {
    width: 100%;
    height: fit-content;
    text-align: center;
    clear: left;
}

.card {
    color: black !important;
}

.card-img, .card, .card-inverse {
    max-width: 100%;
    height: auto;
}

.titleDesc {
    padding-right: 15%;
    padding-left: 15%; 
}

